website/static/css/custom.css
/* ... */
/********************************/
/* MAIN DOCUMENT
/********************************/

/* HOME */
.homeContainer .wrapper {
  padding: 0 0;
}

a.tile38NavButton:hover,
a.tile38NavButton.solid {
  color: white;
  background: #0d6c9b;
  transition: 0.4s;
  border-radius: 6px;
  padding: 10px 16px;
}
a.tile38NavButton.solid:hover {
  background: #09405c;
  transition: 0.4s;
}

/* DOCS */
.docsContainer {
  padding-top: 80px;
}

.postHeaderTitle {
  font-weight: 700;
}

/* BLOG */
.blogContainer {
  padding-top: 90px;
}

/* keep blog content width consistent with other pages at varying page widths */
.blog .wrapper {
  max-width: 1400px;
}

/* CODE */
code.language-tile38-cli {
  font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
  border-radius: 3px;
  background-clip: padding-box;
  background: #272822;
  font-size: 14px;

  color: #f8f8f2;
  display: block;
  overflow-x: auto;
  padding: 18px 22px;
  /* white-space: pre-wrap; */
}

code.language-tile38-cli .hljs-command {
  color: #a6e22e;
}
code.language-tile38-cli .hljs-number,
code.language-tile38-cli .hljs-neg-number {
  color: #66d9ef;
}

code.language-tile38-cli .hljs-comment {
  color: #75715e;
}
code.language-tile38-cli .hljs-geojson {
  color: #e6db74;
}

/********************************/
/* COMMANDS FILTER TABS
/********************************/
/* .commandsContainer {
  max-width: 860px;
} */

/* .commandsWrapper {
  justify-content: center;
} */

.commandtable {
  margin-bottom: 1.5em;
}

.filterbar {
  display: flex;
  flex-wrap: wrap;
  list-style: none;
  justify-content: space-between;
  padding: 0 0;
  margin-bottom: 15px;
}

.filterbar a {
  font-size: 18px;
  margin-top: 0;
  margin-right: 12px;
  color: black;
}

.filterbar a.active {
  font-weight: 700;
}

.commands-list a {
  color: black;
  display: flex;
  padding: 5px 10px;
  margin: 0 -10px;
}

.commands-list a:hover {
  background-color: rgba(97, 135, 159, 0.15);
}

.commands-list a.command .nameargs {
  float: left;
}

.commands-list a.command .nameargs .name {
  color: black;
  font-weight: 700;
}

.commands-list a:hover.command .nameargs .name {
  color: #0d6c9b;
}

.commands-list a.command .summary {
  float: right;
  margin-left: 12px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

/********************************/
/* PREV/NEXT BUTTONS
/********************************/
.docs-prev,
.docs-next {
  color: default;
  background: default;
  color: initial;
  background: initial;
  border: 1px solid #0d6c9b;
}

/********************************/
/* FOOTER
/********************************/
.nav-footer {
  margin-top: 80px;
  background-color: #191a1a;
}
.nav-footer .sitemap {
  max-width: 1400px;
  padding: 0 30px;
}

.nav-footer .copyright {
  color: rgba(255, 255, 255, 0.6);
  text-align: left;
}

div.docs,
div.community,
div.more {
  text-align: right;
}

@media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
}

@media only screen and (max-width: 736px) {
  .toggleNav h2 i {
    font-style: normal;
  }
  .nav-footer .sitemap {
    padding: 0;
  }

  div.docs,
  div.community,
  div.more {
    text-align: left;
  }
}

@media only screen and (min-width: 765px) {
  /* COMMANDS FILTERING CONTAINER */
  .commandsWrapper {
    justify-content: center;
  }
}

@media only screen and (min-width: 1024px) {
  .fixedHeaderContainer {
    height: 80px;
    padding-top: 25px;
  }

  .homeContainer {
    padding-top: 30px;
  }

  .docsNavContainer {
    margin-top: 80px;
    position: static;
    overflow-y: visible;
  }

  nav.toc {
    padding: 0 0;
  }

  .onPageNav {
    margin-top: 80px;
  }

  .documentContainer > .wrapper {
    margin-top: 80px;
  }

  /* GET TILE38 BUTTON */
  .navigationSlider .slidingNav ul li a.tile38NavButton {
    padding: 20px 16px;
    top: -5px;
    margin-left: 8px;
    position: relative;
    border-radius: 6px;
    color: default;
    background: default;
    color: initial;
    background: initial;
    border: 1px solid #0d6c9b;
  }

  .navigationSlider .slidingNav ul li a.tile38NavButton:hover,
  .navigationSlider .slidingNav ul li > a.tile38NavButton:focus,
  .navigationSlider .slidingNav ul li > a.tile38NavButton:hover {
    color: white;
    background: #0d6c9b;
    transition: 0.4s;
  }

  /* EDIT LINK BUTTON */
  .edit-page-link {
    font-size: 12px;
    color: default;
    background: default;
    color: initial;
    background: initial;
    border: 1px solid #0d6c9b;
  }

  /* FOOTER */
  .nav-footer .sitemap div {
    flex: unset;
  }
  .nav-footer .sitemap div.legal {
    width: 50%;
  }
}
/* ... */

